--- a/TDRv/Form1.resx
+++ b/TDRv/Form1.resx
@@ -145,20 +145,20 @@
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM+SURBVFhH3VY7aFRBFE0nms/uvDUGwUoFg42lrZ2dCJJO
-        UQtFEAsbsRNsVwnJvplNFBEiiGwhKCKk0c4qYpCA+2YSV/wgCmKhohAh3jPvztu377M/VxEPXNg998zc
-        O2/u3JmhXiBk8NhTZqOdQcPywSMrYJaxfPDoFOD/SIAmqAk/uFeomANMReg3Ac8PTngV0/Ckvs1UNopS
-        H3WTwETFSPBeVe/1lH6QF8DB+Yel/upJc27cN7s9Xz90PAwxWJ7AjN4kVP1pKNSXPPXiM34LaT7GJ4CP
-        R6QQjotrQxPK/HA+xEAsHtKEUPqiHSDrTwrqudh2fW2CBpWbE+kyS9uioIKd9KmvuXEU/Ba+4GjlbUnI
-        cIGIxfIQY3N6V3Ol+gjTvwXUULKOKLGTNgGKhZhM0+ppr122TP0xCKnv2lhcXzZTu3Kp10uz9UlLdoBQ
-        q6ep4y2gskeleUPja9hjdrdFsRrsI/06YtovhCNnE0CRzOgx1uVCqGAp1GdZfYVluZgoLw/bWKRHbHvu
-        3QQ0+SPahoOsTSGuJZtCoYbFaqZifI3lKVA/2E/+6DhH2pIyZ6l631vy8srPrM9JmmNuIFMpOD+0TEVw
-        q4aNKmxbcJxdIcT8WoGaxxwEWTca8Xb1RWUOMZUCfBwk9RXcTSrkamXc/zDCdCtcQUYVGgMX28bWuVfb
-        mUoBPmigZSqCO2nJo9mCdgnYXk4+7DlTKXA9bEDLVISOCXTaAnvsMDkVHFMpwMfjF5iK4LaATO64+noz
-        0yG6KUKcfZ6gYxFCy1QEar+zzu/55hO6onUQ0fUxjPcAFBz2HBYrPsyxxPIUSrJ+mAIvOy1ZredGhEGx
-        CVqMEllkWS4K041iSyNyhddLK+aeUEO1jynzjn7fz9q2LJTmG5MjV+rfEDMqSFehf+cyCou55aS1u46R
-        Ze7R6RGuVlLXMZB8kJTUyz3FqrkRJgVbvdP1bSn1BYyxzauqzzONBBZtAskHiUXiSVaYfva9GTxuvT/J
-        sCjhm1P4nfskA/BgTA7Ec4r695ktynxxPMtTcP7+HqUMKsSbyU/n4Cbhvynk+aNnecYl1RP6TWBg+GcS
-        6GQsHzxiN1quQcPyLjA09AtampjkuapA0gAAAABJRU5ErkJggg==
+        UQtFEAsbsRPrVUKyb2YTRYQIIlsIighptLOKGCTgvpnEFT+IglioKESI98y78/bt++zPVcQDF3bPPTP3
+        zps7d2aoFwgZPPaU2Whn0LB88MgKmGUsHzw6Bfg/EqAJasIP7hUq5gBTEfpNwPODE17FNDypbzOVjaLU
+        R90kMFExErxX1Xs9pR/kBXBw/mGpv3rSnBv3zW7P1w8dD0MMlicwozcJVX8aCvUlT734jN9Cmo/xCeDj
+        ESmE4+La0IQyP5wPMRCLhzQhlL5oB8j6k4J6LrZdX5ugQeXmRLrM0rYoqGAnfeprbhwFv4UvOFp5WxIy
+        XCBisTzE2Jze1VypPsL0bwE1lKwjSuykTYBiISbTtHraa5ctU38MQuq7NhbXl83Urlzq9dJsfdKSHSDU
+        6mnqeAuo7FFp3tD4GvaY3W1RrAb7SL+OmPYL4cjZBFAkM3qMdbkQKlgK9VlWX2FZLibKy8M2FukR2557
+        NwFN/oi24SBrU4hryaZQqGGxmqkYX2N5CtQP9pM/Os6RtqTMWare95a8vPIz63OS5pgbyFQKzg8tUxHc
+        qmGjCtsWHGdXCDG/VqDmMQdB1o1GvF19UZlDTKUAHwdJfQV3kwq5Whn3P4ww3QpXkFGFxsDFtrF17tV2
+        plKADxpomYrgTlryaLagXQK2l5MPe85UClwPG9AyFaFjAp22wB47TE4Fx1QK8PH4BaYiuC0gkzuuvt7M
+        dIhuihBnnyfoWITQMhWB2u+s83u++YSuaB1EdH0M4z0ABYc9h8WKD3MssTyFkqwfpsDLTktW67kRYVBs
+        ghajRBZZlovCdKPY0ohc4fXSirkn1FDtY8q8o9/3s7YtC6X5xuTIlfo3xIwK0lXo37mMwmJuOWntrmNk
+        mXt0eoSrldR1DCQfJCX1ck+xam6EScFW73R9W0p9AWNs86rq80wjgUWbQPJBYpF4khWmn31vBo9b708y
+        LEr45hR+5z7JADwYkwPxnKL+fWaLMl8cz/IUnL+/RymDCvFm8tM5uEn4bwp5/uhZnnFJ9YR+ExgY/pkE
+        OhnLB4/YjZZr0LC8CwwN/QJKHZjirSKJ/gAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="tsb_DevParamSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -206,6 +206,39 @@
         M3gh+eNk2SdW+vuPEhVRigAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="hResult.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hSn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hAverage.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hZminmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hZmaxmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hRemark.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="hSD.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="cLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -290,37 +323,16 @@
   <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="hResult.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mFlag.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="hDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mStep.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="hLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mDescription.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
-  <metadata name="hSn.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hAverage.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hZminmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hZmaxmum.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hDate.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hTime.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hRemark.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="hSD.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+  <metadata name="mLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="mFlag.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -333,6 +345,48 @@
     <value>True</value>
   </metadata>
   <metadata name="mLayer.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn5.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn6.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn7.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn8.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn9.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn10.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn11.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn12.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn13.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
