日常更新： 1.添加ICON

--- a/TDRv/Form1.resx
+++ b/TDRv/Form1.resx
@@ -347,4 +347,80 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>76</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAD/////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        /////////////////////////////////////////////////////////////9nZ///Cwv//////////
+        ////////////////////////////////////////////////////////8/P/////////////////////
+        ///////////////////////////////////////////////////39////v7///n5///5+f//8vL//1JS
+        ///8/P//////////////////9fX/////////////+Pj///r6/////////v7///////+AgP//6+v/////
+        //////////////b2/////////f3///j4////////////////////////2tr//0tL///R0f//eXn//2Vl
+        ///Jyf//aWn///Dw/////////f3//1VV//97e///rq7//5qa//9ubv//XV3//8/P//+wsP//vLz//8HB
+        //+rq///lpb//8TE//+zs///XV3//+fn//9SUv//fn7//zU1//////////////////+1tf//pKT/////
+        ///b2///YGD//8fH//9paf//8PD////////b2///e3v/////////////V1f////////l5f//c3P/////
+        //////////////////+Wlv//w8P//5aW///S0v//4+P//3Jy////////WVn//////////////////7S0
+        //+lpf///////1JS///s7P///v7//2lp///w8P///////+np//9nZ////////+7u//9gYP//9fX//8zM
+        //+Cgv///////////////////////5aW///Dw///lpb//9LS///y8v//YmL///7+//8/P///////////
+        ////////cXH//1hY///V1f//nJz//4GB///j4///np7///b2/////////////6am//9zc///xMT//9zc
+        //92dv//eHj//+7u////////////////////////lpb//7+///9QUP//cHD//+rq//+jo///cHD//zs7
+        ///////////////////X1///zMz///////////////////////+amv//8/P/////////////////////
+        //////////////////////////////////////////////////+Wlv//w8P//8PD///n5///////////
+        ////////Wlr///////////////////////////////////////////////////r6////////////////
+        /////////////////////////////////////////////////////////////97e///u7v//////////
+        ///////////////////T0/////////////////////////////////////Dx///29///////////////
+        //////////////////////////Hy//7N0P/+w8f//tzf//////////////////////////////j4//7J
+        zf/+yc3///Lz///////////////////////////////////////////////////////7JTT//XeA////
+        /////////////////////////+rs//xibP/7Gyr/+xcn//sXJ//7Fyf//D5L//7M0P////////////7S
+        1f/7Ljz/+xcn//sXJ//7JDP//re8//////////////////////////////////////////////////sl
+        NP/9d4D////////////////////////7/P/8Qk//+yMy//2Um//+2Nv//+bo//7Fyf/8Ul7/+yU0//7h
+        4////////E5b//w6R//+0tX//tzf//xOW//7JjX///r6////////////////////////////////////
+        ////////+yU0//13gP///////////////////////re8//sXJ//+tLr////////////////////////2
+        9//7IzL//YuT///////7HCv//ZKZ/////////////ra7//sXJ//+0dT/////////////////////////
+        ///////////////////7JTT//XeA///////////////////////+vcL//GNu///8/P//////////////
+        //////////j4//slNP/9f4j///////7IzP/+4uT////////////+yMz/+xcn//6/xP//////////////
+        //////////////////////////////slNP/9d4D/////////////////////////////////////////
+        //////////j4//6+w//8UV3/+xcn//7Fyf////////////////////////////7IzP/7Fyf//ru/////
+        ////////////////////////////////////////+yU0//13gP//////////////////////////////
+        ////7O3//Zif//xXYv/7Hi7/+xcn//smNf/9oaj//////////////////////////////////sjM//sX
+        J//+u7/////////////////////////////////////////////7JTT//XeA////////////////////
+        /////////sTI//slNP/7Fyf//DpI//17hP/+v8T///j4////////////////////////////////////
+        ///+yMz/+xcn//67v/////////////////////////////////////////////slNP/9d4D/////////
+        ///////////////////7MkD//ERR//7Y2///////////////////////////////////////////////
+        //////////////7IzP/7Fyf//ru/////////////////////////////////////////////+yU0//13
+        gP////////////////////////b3//sXJ//9mqH///////////////////////69wv/7Kzr//trc////
+        /////////////////////////sjM//sXJ//+u7//////////////////////////////////////////
+        ///7JTT//XeA/////////////////////////////EBN//xJVv//8PH/////////////5+n//EdU//sx
+        QP//+vr////////////////////////////+yMz/+xcn//67v////////////////////////Ftn//sX
+        J//7Fyf/+xcn//sXJ//7Fyf/+xcn//sXJ//7Fyf//q2z///////+zdD/+yw6//sfL//8Pkv//D5L//sd
+        Lf/7KTj//srO//////////////////////////////////7IzP/7Fyf//ru/////////////////////
+        ///+vcL//aKp//2iqf/9oqn//aKp//2iqf/9oqn//aKp//2iqf/+3uH/////////////8fL//aiu//2H
+        j//9iJD//qyy///x8v///////////////////////////////////////+nr//2iqf//5Ob/////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////////////////////////////////////////////////////////////
+        ////////////////////////AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA=
+</value>
+  </data>
 </root>
