--- a/TDRv/Form1.resx
+++ b/TDRv/Form1.resx
@@ -127,7 +127,7 @@
   <data name="tsb_DevConnect.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAKHSURBVFhH7Ze/axRBFMcPC0ETb3fmDKJYiFio2FvYWEkK
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAKHSURBVFhH7Ze/axRBFMcPC0ETb3fmDKJYiFio2FvYWEkK
         EZv8BRaCBEywsUtldWjI7c6sMYqVzWEhooKkEBsVUQx6envzTkICqSxsRBGL872dt+ee3Jrb3O3a5APD
         7nx3dr7vzS92S9sUiTO/6jpB8xBXi0UG5rjUYUN6sMpScXTNNXSw1FkeLeMLZsJV5lJUNJw7eH19F+mF
         mEttqs78ux9skiwPczWn7DDbp2Tg+rCM97cxmDkqrjav2Tg/882ys8FAR+jWG5ZGQ9JcaLjCcl+wDU4D
@@ -144,7 +144,7 @@
   <data name="tsb_DevPOptSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAM/SURBVFhH3VY9a1RBFE0nmmR3560xCFYqGGwsbe3sRJB0
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAM/SURBVFhH3VY9a1RBFE0nmmR3560xCFYqGGwsbe3sRJB0
         iloogljYiF1+QJSQ7JvZRBEhgsgWgiJCGu2sIgYJuG9m44ofiIJYqChEiPfMu/P27fvYj7iKeODC7rln
         5t55c+fODPUDIYPHnjIbnQwalg8eWQGzjOWDR7cA/0cCNEFN+MG9YsUcYirCZhPw/OCUVzFNT+rbTGWj
         JPVxNwlMVIwE71X1fk/pB3kBHJx/WOqvnjQXxnyz1/P1Q8fDEIPlCczqLULVn4ZCPeWpF5/xW0jzMT4B
@@ -164,7 +164,7 @@
   <data name="tsb_DevParamSet.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACEAAAAgCAYAAACcuBHKAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIYSURBVFhH7ZY/SxxBGMavslJvd3PG1soipBBMkyKQSkiw
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAIYSURBVFhH7ZY/SxxBGMavslJvd3PG1soipBBMkyKQSkiw
         FZQ0knwBJRZiY2kRCJjbmY1oY6GFKGKV0s7uikAguzt7jTYi+Bn0fWeeOfey3sQ/uyByP1ju9nmfeefZ
         m9nbreXxo+yjL5LjQKarkJx4sj2t/SKdguSE+7LfD7M5SEXYFEh1xUZITkzg+/udF9kPYemHsFQWYvXP
         gC/TbROgc6yg2k0VIQY34oYv45ad3I7BsQvbDVWEoJ6fMeHe4Ho6wlo9+jvmific9Rc/szfaaKkkhIhP
@@ -179,7 +179,7 @@
   <data name="tsb_GetTestIndex.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJsSURBVFhH5ZY/aBUxHMffJEjBy+VZdLCgIAgOgji6CC4K
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAJsSURBVFhH5ZY/aBUxHMffJEjBy+VZdLCgIAgOgji6CC4K
         1UGoIKjgKvgHkSIuOriIYOXdJa+2oAgO0k0XFQTBQUSHFi3tXX5XK10ERUEQxEl/yf1y17vLO+zQLH4g
         vNz390t+3xdyyXU0vK928ym1zTz4xhSX8Ec3Jpb2kOyPIIID1oDuk+yP/9IAF8lrXY/JpVGvBvRGZ5FK
         bD0u1UVvBobj+a1lYf3vk+cm4MsAj+GVs44PA1xkx2yNUKiI5BwfBsJY3chrpE9JKvFiQKQv9fyhVFdI
@@ -196,7 +196,7 @@
   <data name="tsb_StartTest.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAGRSURBVFhH7ZcxTsNAEEV9AaLsJg01EgU1Ekeg4Qq0dJwh
+        YQUAAAAJcEhZcwAAFiUAABYlAUlSJPAAAAGRSURBVFhH7ZcxTsNAEEV9AaLsJg01EgU1Ekeg4Qq0dJwh
         ZwDHi6kQHeIkHCCFs5MIJDo4BHjWM4yy2ZVlecFB8KQpZv/PzEh2rNnsH5+xWZ/pub1VpgJt4CNFuFp1
         TaxNbcJoY2ehAmnDzqjdJpNydSymaqEMnJLUG6yFNbk+9iJJqE13KI4NPNFRcrA29sBedCToHJ7dhPPl
         CR0lB2u7HnUvOhKcUAel30a0z68aYFq+7I+u7AGlneg9gMqhYK8y9n5Udhsk2icqeKgC3tiLsWfgVZnl
@@ -248,6 +248,12 @@
   <metadata name="cCurveImage.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="cPanel_ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="cSet_ID.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="dataGridViewTextBoxColumn1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -288,6 +294,12 @@
     <value>True</value>
   </metadata>
   <metadata name="dataGridViewTextBoxColumn14.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column1.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column2.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
   <metadata name="dataGridViewTextBoxColumn15.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
@@ -332,6 +344,12 @@
   <metadata name="dataGridViewTextBoxColumn28.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="Column3.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
+  <metadata name="Column4.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="mFlag.UserAddedColumn" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -347,4 +365,28 @@
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>76</value>
   </metadata>
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAEAIABoBAAAFgAAACgAAAAQAAAAIAAAAAEAIAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAA
+        AADUzMX/1MzF/9TMxf/Vzcb/1c3G/9bOx//Xzsf/1s7H/9jQyf/Z0cr/29PM/9zUzf/d1M7/3dXQ/9/W
+        0v/f19P/1MzF/9PLxf/Uy8b/1MvF/9PLxP/VzMb/08vE/9DHv//QyMD/2NDK/9rSzf/c1M3/3NTP/93V
+        0f/f19L/39jU/8Czy/+1pc//rZrR/7Sjz/+3qMX/rp7F/7CfxP+rmcD/pZK7/6mWy/+zodT/yLrT/8S1
+        1v/Fttj/wbPa/9DH2P/Assz/wLPM/72uzf+3qMP/uKq+/7uuw/+1p8H/sKG3/6+fuf+voLb/vrDF/8y/
+        1P/QxNb/0cfX/8m/2v/UzNr/1s3G/9TLxf/TysP/zb21/8Gwp//GvLL/xrSt/76oof/Bsaj/0MS+/867
+        tP/Pv7j/39fS/+Da1f/g3Nf/4d3Z/9bOx//Vzcb/yr62/7dwcP+4enD/va2k/7RZWf+yTUv/sVFO/8GQ
+        iv+zYV7/rU1K/8mbk//g29X/4t7Z/+Pf2//Xz8j/08vD/87Fvv+4cnT/tntw/8zCu//v4uH/7+fl/8+U
+        mf/Hf3f/yL21/72gm/+1VVD/39TO/+Pf2//l4N3/18/I/9LKw//CuK//sWlp/7Z7cP/Kwrv/6eDg/8+a
+        nP+5VFT/1Kyl/8nBuf/Br6r/t1NS/+HUzv/l4d3/5+Lf/9bOx//NxLz/wbet/7Bpaf+1e3D/x722/8Fx
+        dP/DdG3/18K9/+Dc2P/MxLz/xrSw/7VSUP/g087/5uLf/+jk4P/Z0cr/ybOt/7eKgv+vVFT/s2FZ/7+W
+        j/+2TlD/z5eS/9e5tP/i2tX/29bQ/9PDwf+4VFP/49bR/+jk4f/p5uL/29PM/9XBvf/Df33/uW9r/7xz
+        b/+2cGr/uoV//7BeWv+2Z2L/0ruz/+Tf2//Wu7r/wnp2/+LTzf/p5uL/6+jk/9zUzv/d1M7/3dTP/9zT
+        zv/Wzsj/xbuy/8S6sf/Ct67/zMK7/87Fvv/j3tr/5uDe/+bg3P/p5eH/6+jk/+3q5v/d1M//3dXP/97W
+        0f/f2NP/2tTO/8W8s//Lwrr/ycC3/83DvP/Lwrv/497b/+jk4f/p5uL/6+jk/+3q5//v7On/3tXQ/97X
+        0f/f2NP/4NnV/9/b1f/W0Mr/1s/J/97Y0//Xz8n/2tTO/+bi3v/q5+P/7Onl/+3r5//v7Or/8O7s/9/X
+        0f/f2NP/4NnV/+Db1v/h3Nf/4t7Z/+Ld2P/l4N3/5uLe/+jk4P/q5+P/7Onl/+3q5//v7Or/8O7s//Lw
+        7//g2NP/39nU/+Db1v/h3Nf/4t7Z/+Pf2//l4d3/5uLf/+jl4f/q5+P/7Onl/+7q5//v7Or/8O7s//Lw
+        7//08vH/AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
